2013-12-21  Ethan A Merritt  <merritt@u.washington.edu>

	* configure.in: automake 1.14 wants an option subdir-objects

2013-12-15  Jyrki Yli-Nokari  <jyrkiylinokari@gmail.com>

	* src/bitmap.c configure.in:
	Jyrki Yli-Nokari, the original author of the code in bitmap.c,
	has agreed to relicense it as dual license (gnuplot + BSD).
	This removes a restriction to non-commercial use imposed by the
	license terms that appeared in earlier versions of file bitmap.c.

2013-12-12  Erik Olofsen  <olofsen@users.sf.net>

	* term/tek.trm:  New terminal driver "sixel" for old DEC terminals
	and printers, emulated by some versions of xterm.

2013-12-12  Ethan A Merritt  <merritt@u.washington.edu>

	* src/util.h (gprintf):  Interpret %h as %g (forward compatibility
	with version 4.7 save files).

	* term/emf.trm:  Invalidate font name at start of each plot.
	Bug #1306

	* src/wxterminal/gp_cairo.c src/wxterminal/wxt_gui.*:
	Modify vertical centering of enhanced text to match default case.
	Bug #1309

2013-12-11  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graph3d.c (key_text):  Apply key title font to key entries.
	Bug #1309

2013-12-11  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* term/emf.trm: Support true pattern-fill. Apply global linewidth.

2013-11-14  Ethan A Merritt  <merritt@u.washington.edu>

	* src/plot2d.c src/plot3d.c:
	Allowed enhanced/noenhanced key word after individual plot titles.

2013-11-10  Ethan A Merritt  <merritt@u.washington.edu>

	* src/mouse.c (event_buttonrelease): "pause mouse" only worked for
	center and right mouse buttons, not for left mouse.
	Bug #1301

2013-11-09  Ethan A Merritt  <merritt@u.washington.edu>

	* src/qtterminal/qt_term.cpp (qt_set_color):  Do not change line type
	just because a color request specifies a linetype color.
	Bugfix.

	* Add a check for valid timer status.  This reduces the number of
	spurious events that are passed through to the main program.

2013-11-07  Ethan A Merritt  <merritt@u.washington.edu>
